// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    viewer={null}
  />
  <Relay(CommunityGuidelinesContainerProps)
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
  />
  <withContext(withContext(createMutationContainer(withContext(createFetchContainer(withContext(withLocalStateContainer(Relay(PostCommentFormContainer))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
    reactionSortLabel="Most Reacted"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="talk-comments-stream-log"
    role="log"
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when there is more disables load more button 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    viewer={null}
  />
  <Relay(CommunityGuidelinesContainerProps)
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
  />
  <withContext(withContext(createMutationContainer(withContext(createFetchContainer(withContext(withLocalStateContainer(Relay(PostCommentFormContainer))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
    reactionSortLabel="Most Reacted"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="talk-comments-stream-log"
    role="log"
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
    <Localized
      id="comments-stream-loadMore"
    >
      <ForwardRef(forwardRef)
        aria-controls="talk-comments-stream-log"
        disabled={true}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </ForwardRef(forwardRef)>
    </Localized>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when there is more renders a load more button 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    viewer={null}
  />
  <Relay(CommunityGuidelinesContainerProps)
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
  />
  <withContext(withContext(createMutationContainer(withContext(createFetchContainer(withContext(withLocalStateContainer(Relay(PostCommentFormContainer))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
    reactionSortLabel="Most Reacted"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="talk-comments-stream-log"
    role="log"
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={null}
      />
    </ForwardRef(forwardRef)>
    <Localized
      id="comments-stream-loadMore"
    >
      <ForwardRef(forwardRef)
        aria-controls="talk-comments-stream-log"
        disabled={false}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </ForwardRef(forwardRef)>
    </Localized>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when use is logged in renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    viewer={Object {}}
  />
  <Relay(CommunityGuidelinesContainerProps)
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
  />
  <withContext(withContext(createMutationContainer(withContext(createFetchContainer(withContext(withLocalStateContainer(Relay(PostCommentFormContainer))))))))
    settings={
      Object {
        "reaction": Object {
          "sortLabel": "Most Reacted",
        },
      }
    }
    story={
      Object {
        "id": "story-id",
        "isClosed": false,
      }
    }
  />
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
    reactionSortLabel="Most Reacted"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="talk-comments-stream-log"
    role="log"
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={Object {}}
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={Object {}}
      />
    </ForwardRef(forwardRef)>
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={Object {}}
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        settings={
          Object {
            "reaction": Object {
              "sortLabel": "Most Reacted",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
        viewer={Object {}}
      />
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;
